# Triangles3D

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  conanfile.txt  readme.md  runtest.sh
Triangles/include/: Triangles.h  double_comparing.h  intersections.h  linear_systems.h  matrix.h  objects3d.h  octree.h  triangles_exceptions.h
Triangles/src/: Triangles.cpp  main.cpp  objects3d.cpp
tests/: CMakeLists.txt  tests.cpp
tests/benchmark/: CMakeLists.txt  benchmark.cpp
tests/e2e/: CMakeLists.txt  runtest.sh
tests/unit_test/: CMakeLists.txt  tests.cpp
